<resources>
    <string name="app_name">WoundCare</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Start_game">Start treatment</string>
    <string name="Credits_button">Credits</string>
    <string name="handbook_button">Handbook</string>
    <string name="Credits_text_01">Treater was created by:</string>
    <string name="Credits_text_02">Rasmus Jagd Christensen
        \n Niklas Kline Lange Frost
        \n Marius Cristian Mic
        \n Jens Hornshøj-Møller
        \n Roberts Deksna
        \n Francisc Vlad Loghin</string>
    <string name="Credits_text_03">With help from:</string>
    <string name="Credits_text_04">Mette Guldal Stefansen</string>
    <string name="Credits_text_05">This app is a project born in:</string>
    <string name="Credits_text_06">Aalborg University Copenhagen</string>
    <string name="Observation">Observation</string>
    <string name="Cleaning">Cleaning</string>
    <string name="Bandaging">Bandaging</string>
    <string name="Filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="finger">Finger</string>
    <string name="Twizzers">Twizzers</string>
    <string name="Gauze">Gauze</string>
    <string name="polihexadin">Polihexadin</string>
    <string name="zinc_cream">Zinc Cream</string>
    <string name="dressing">Dressing</string>
    <string name="tape">Tape</string>
    <string name="roll">Roll</string>
    <string name="hydrogel">Hydrogel</string>
    <string name="textview">TextView</string>
    <string name="diabetic">Diabetic</string>
    <string name="biography">Biography</string>
    <string name="smoking">Smoking</string>
    <string name="textview2">TextView</string>
    <string name="treatment_notes">Treatment Notes</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae porttitor tortor. Etiam quis malesuada tellus. Suspendisse sed erat lobortis, ultricies nibh eu, auctor nulla.</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_ut_rutrum_rhoncus_vehicula_sed_pellentesque_est_in_volutpat_sagittis_duis_elit_quam_gravida_ut_pulvinar_quis_dignissim_a_massa">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum rhoncus vehicula. Sed pellentesque est in volutpat sagittis. Duis elit quam, gravida ut pulvinar quis, dignissim a massa.</string>
    <string name="observation_phase">Observation phase</string>
    <string name="cleaning_phase">Cleaning phase</string>
    <string name="bandaging_phase">Bandaging phase</string>
    <string name="observation_phase_exp">You are now in the Observation Phase, here we observe the wound, it’s size, depth, the level of infection etc. Use one of the tools to start the observation! After this Phase you will be asked to assess the status of the wound.</string>
    <string name="cleaning_phase_exp">You are now in the Cleaning Phase. The wound has been observed and now it’s time to clean it. Use one of the cleaning tools to start!</string>
    <string name="bandaging_phase_exp">You are now in the Bandaging phase. The wound has been cleaned and now we need to close it up. Choose one of the bandaging tools to start bandaging the wound!</string>
</resources>
