<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="g2p2.woundcare.CreditsActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Credits_text_01"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        android:layout_marginTop="179dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="9dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credits_text_02"
        android:textColor="#000000"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        android:layout_marginLeft="23dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credits_text_03"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credits_text_04"
        android:textColor="#000000"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        android:layout_marginLeft="23dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credits_text_05"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credits_text_06"
        android:textColor="#211A52"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        android:layout_marginLeft="23dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/treater"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
